languages/html/umc_html_parser/src/lexer/snapshots/umc_html_parser__lexer__test__no_complete_comment.snap
---
source: languages/html/umc_html_parser/src/lexer/mod.rs
expression: test(HTML_STRING)
---
Tokens: [
    Token {
        kind: Comment,
        start: 0,
        end: 3,
    },
    Token {
        kind: Eof,
        start: 3,
        end: 3,
    },
]
Errors: [
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Expected >, but found EOF",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                3,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]
