languages/html/umc_html_parser/src/lexer/snapshots/umc_html_parser__lexer__test__no_string_end.snap
---
source: languages/html/umc_html_parser/src/lexer/mod.rs
expression: test(HTML_STRING)
---
Tokens: [
    Token {
        kind: TagStart,
        start: 0,
        end: 1,
    },
    Token {
        kind: ElementName,
        start: 1,
        end: 2,
    },
    Token {
        kind: Whitespace,
        start: 2,
        end: 3,
    },
    Token {
        kind: Attribute,
        start: 3,
        end: 7,
    },
    Token {
        kind: Eq,
        start: 7,
        end: 8,
    },
    Token {
        kind: Attribute,
        start: 8,
        end: 31,
    },
    Token {
        kind: Eof,
        start: 31,
        end: 31,
    },
]
Errors: [
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Expected \", but found EOF",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                31,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]
