languages/html/umc_html_parser/src/lexer/snapshots/umc_html_parser__lexer__test__process_embedded_content.snap
---
source: languages/html/umc_html_parser/src/lexer/mod.rs
expression: test(HTML_STRING)
---
Tokens: [
    Token {
        kind: TextContent,
        start: 0,
        end: 1,
    },
    Token {
        kind: TagStart,
        start: 1,
        end: 2,
    },
    Token {
        kind: ElementName,
        start: 2,
        end: 6,
    },
    Token {
        kind: Whitespace,
        start: 6,
        end: 7,
    },
    Token {
        kind: Attribute,
        start: 7,
        end: 11,
    },
    Token {
        kind: Eq,
        start: 11,
        end: 12,
    },
    Token {
        kind: Attribute,
        start: 12,
        end: 16,
    },
    Token {
        kind: TagEnd,
        start: 16,
        end: 17,
    },
    Token {
        kind: TextContent,
        start: 17,
        end: 18,
    },
    Token {
        kind: TagStart,
        start: 18,
        end: 19,
    },
    Token {
        kind: ElementName,
        start: 19,
        end: 23,
    },
    Token {
        kind: TagEnd,
        start: 23,
        end: 24,
    },
    Token {
        kind: TextContent,
        start: 24,
        end: 27,
    },
    Token {
        kind: TagStart,
        start: 27,
        end: 28,
    },
    Token {
        kind: ElementName,
        start: 28,
        end: 34,
    },
    Token {
        kind: TagEnd,
        start: 34,
        end: 35,
    },
    Token {
        kind: TextContent,
        start: 35,
        end: 94,
    },
    Token {
        kind: CloseTagStart,
        start: 94,
        end: 96,
    },
    Token {
        kind: ElementName,
        start: 96,
        end: 102,
    },
    Token {
        kind: TagEnd,
        start: 102,
        end: 103,
    },
    Token {
        kind: TextContent,
        start: 103,
        end: 104,
    },
    Token {
        kind: CloseTagStart,
        start: 104,
        end: 106,
    },
    Token {
        kind: ElementName,
        start: 106,
        end: 110,
    },
    Token {
        kind: TagEnd,
        start: 110,
        end: 111,
    },
    Token {
        kind: TextContent,
        start: 111,
        end: 112,
    },
    Token {
        kind: CloseTagStart,
        start: 112,
        end: 114,
    },
    Token {
        kind: ElementName,
        start: 114,
        end: 118,
    },
    Token {
        kind: TagEnd,
        start: 118,
        end: 119,
    },
    Token {
        kind: Eof,
        start: 119,
        end: 119,
    },
]
Errors: []
